--- a/package.json
+++ b/package.json
@@ -112,7 +112,7 @@
     "karma-phantomjs-launcher": "~1.0.0",
     "lcov-result-merger": "~1.2.0",
     "mock-fs": "~3.11.0",
-    "node-inspector": "~0.12.8",
+    "node-inspector": ">=0.12.8",
     "run-sequence": "~1.2.2",
     "semver": "~5.3.0",
     "should": "~11.1.0",
